# ml-pipeline-studio

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/pages/: admin.py  predict.py  results.py  train.py
config/: auth_config.example.yaml
configs/: config.yaml
src/api/: main.py
src/core/: algorithm_registry.py  metrics.py  problem_detector.py
src/data/: generate_data.py  load_data.py  preprocess.py  validate_data.py
src/explainability/: shap_explainer.py
src/models/: evaluate.py  registry.py  train.py  tune.py
src/monitoring/: drift_detection.py  logger.py
src/utils/: config.py
tests/: test_api.py  test_data_validation.py  test_training.py
