[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "production-ml-pipeline"
version = "1.0.0"
description = "Production ML Pipeline for Telco Churn Prediction"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "pandera>=0.19.3",
    "mlflow>=2.13.2",
    "optuna>=3.6.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pytest>=8.2.2",
    "httpx>=0.27.0",
    "joblib>=1.4.2",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.9",
    "ruff>=0.4.9",
    "black>=24.4.2",
    "matplotlib>=3.10.0",
    "scipy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
